...
            .frame(width: 0, height: 0)
            .sheet(isPresented: $showSheet, onDismiss: {
                seenSheet = true
                showSheet = false
            }) {
                VStack {
                    Text("Welcome to BallotPlay!")
                        .bold()
                        .font(.title)
                        .padding(.bottom, 50)
                    
                    // Elements
                    SheetElem(icon: "key", color: .orange, text: "Welcome to this app all about voting systems: a fascinating and powerful tool that decides who gets the key to public office and who does not.")
...
                        showSheet = false
                    } label: {
                        ZStack {
                            RoundedRectangle(cornerRadius: 10)
                                .fill(Color.accentColor)

                            Text("I'm ready!")
                                .bold()
                                .foregroundStyle(.white)
                                .padding(20)
                        }
                        .frame(maxHeight: 50)
                    }
...
