...
                RoundedRectangle(cornerRadius: 10)
                    .fill(Color.accentColor)
                    .shadow(color: .accentColor, radius: 80)

                
                HStack {
                    Text("So, what's next?")
                        .bold()
                        .foregroundStyle(.white)
                        .padding(20)
                }
            }
            .padding(.top, 20)
...
